src/test/ui/nll/issue-73159-rpit-static.stderr
error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/issue-73159-rpit-static.rs:9:26
   |
LL | impl<'a> Foo<'a> {
   |      -- hidden type `Copied<std::slice::Iter<'a, u8>>` captures the lifetime `'a` as defined here
LL |     fn make_it(&self) -> impl Iterator<Item = u8> {
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0700`.
